[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onlyfans-sdk"
version = "3.0.0"
description = "OFAuth Python SDK v2 - Type-safe API client with Pydantic models"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
